hard-gists/8664457/run.log
=== Docker Run Log for 8664457 ===
Started at: Mi 29. Okt 17:54:26 CET 2025

[2025-10-29 17:54:26] START: Running container for 8664457
[2025-10-29 17:54:27] SUCCESS: Container 2040a2e4b0f98bf8193c9be408ecb271d2bb13841908f42538b6fc230d8adc4d started for 8664457
=== Container logs for 8664457 ===
  File "/snippet.py", line 76
    print "Running:", app
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8664457 ===
[2025-10-29 17:54:29] INFO: Container 2040a2e4b0f98bf8193c9be408ecb271d2bb13841908f42538b6fc230d8adc4d has stopped
